# NekUpload

./: .buildinfo  .gitignore  README.md  README.rst  app.py  genindex.html  index.html  main.py  nektar.xsd  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  schema.json  search.html  searchindex.js  setup.py
.github/workflows/: cd.yml  ci.yml
NekUpload/: __init__.py  app.py  cli.py  index.py  manager.py  upload_manager.py  utility.py  validator.py
NekUpload/NekData/: data_type.py  expansions.py
NekUpload/db/: db.py  invenio_db.py  invenio_rdm_api.py
NekUpload/frontend/: create_author_window.py  dynamic_fields_frame.py  file_selector.py  header_frame.py  static_fields_frame.py  style_guide.py  terminal_widget.py
NekUpload/metadataModule/: __init__.py  extractor.py  identifier.py  invenioMetadata.py  metadata.py  relations.py  user.py
NekUpload/newFrontend/: style_guide.py
NekUpload/uploadModule/: __init__.py  custom_exceptions.py  invenio_db.py  invenio_rdm_api.py
NekUpload/utils/: custom_exception.py  hdf5_reader.py  parsing.py  xml_reader.py
NekUpload/validationModule/: __init__.py  custom_exceptions.py  geometry.py  hdf5schema_validator.py  hdf5validator.py  nektar.xsd  output.py  session.py
_sources/code_guide/: metadataModule.rst.txt  uploadModule.rst.txt  utils.rst.txt
_sources/developer_guide/: developer.rst.txt  installation.rst.txt
_sources/user_guide/: faq.rst.txt  nektar.rst.txt  quickstart.rst.txt  usage.rst.txt
code_guide/: code.html  metadataModule.html  uploadModule.html  utils.html
code_guide/_autosummary/: NekUpload.NekData.data_type.html  NekUpload.NekData.expansions.html  NekUpload.NekData.html  NekUpload.app.html  NekUpload.cli.html  NekUpload.frontend.create_author_window.html  NekUpload.frontend.dynamic_fields_frame.html  NekUpload.frontend.html  (+55 more)
demos/: invalid_invenio_upload.py  valid_invenio_upload.py
developer_guide/: developer.html  installation.html
examples/: cli_subcommands.sh  invalid_invenio_upload.py  invenio_metadata_upload.py  valid_invenio_upload.py
tests/: conftest.py
user_guide/: faq.html  installation.html  nektar.html  quickstart.html  usage.html
(+182 files in other folders)
