[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NekUpload"
version = "0.1.0"
authors = [
    { name="Stephen Liu", email="stephen.liu21@imperial.ac.uk" },
]
description = "Upload and validation pipeline for Nektar++ datasets to an online repository"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "h5py",
    "lxml",
    "requests",
    "python-dotenv",
    "iniconfig",
    "packaging",
    "pytest",
    "pytest-mock",
    "memory_profiler",
    "click",
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "pyyaml",
    "ruamel.yaml"
]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[project.urls]
nektar = "https://nektar.info"

[project.scripts]
nekupload-app = "NekUpload.app:main"
nekupload = "NekUpload.cli:main"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
testpaths = ["tests"]