[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NekUpload"
version = "0.2.0"
authors = [
    { name="Stephen Liu", email="stephen.liu21@imperial.ac.uk" },
]
description = "Upload and validation pipeline for Nektar++ datasets to an online repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "h5py",
    "lxml",
    "requests",
    "sympy",
    "python-dotenv",
    "click",
    "packaging",
    "pyyaml",
    "ruamel.yaml"
]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"NekUpload" = ["validationModule/schemas/*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "memory_profiler",
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "iniconfig",
]
[project.urls]
nektar = "https://www.nektar.info"

[project.scripts]
nekupload = "NekUpload.cli:main"

[project.gui-scripts]
nekupload-app = "NekUpload.app:main"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
testpaths = ["tests"]